; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_showwal.c_swab32.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_showwal.c_swab32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @swab32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @swab32(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = and i32 %3, 255
  %5 = shl i32 %4, 24
  %6 = load i32, i32* %2, align 4
  %7 = and i32 %6, 65280
  %8 = shl i32 %7, 8
  %9 = add i32 %5, %8
  %10 = load i32, i32* %2, align 4
  %11 = and i32 %10, 16711680
  %12 = lshr i32 %11, 8
  %13 = add i32 %9, %12
  %14 = load i32, i32* %2, align 4
  %15 = and i32 %14, -16777216
  %16 = lshr i32 %15, 24
  %17 = add i32 %13, %16
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
